2001-11-04  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: no longer need to link to pthread stuff

	* callbacks.c: double click toggles info tab

	* prettytable.c: work with libwnck

	* procactions.c: bring back root dialog stuff but doesn't seem
	to work

2001-10-31  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some porting to GtkDialog

2001-10-31  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: hook up the widgets with mnemonics. This
	is so much easier in Gtk 2.0 :) Also get the sensitivity stuff
	right

	* callbacks.c: minor fixes

2001-10-29  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: mkae renice actually work

2001-10-29  Kevin Vandersloot <kfv101@psu.edu>

	Too many changes to detail. Use libwnck to get icons. Return
	memmaps, popup menu, get sorting right, bring back dialogs.

2001-10-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: bring back the dialogs

	* procactions.c: update to use the procdata->selected_process
	instead of selected_node

	* interface.c: bring back some menuitems

	* callbacks.c: bring back killing processes and renice and 
	prefs dialog

2001-10-02  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: finish up gconf support. All config options
	are now saved

	* interface.c: get the gtk_widget_shows right as well as other
	minor fixes

2001-10-01  Kevin Vandersloot <kfv101@psu.edu>

	Various minor fixes and add the beginnings of gconf support
	for the configuration

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: get sorting right and store the process info
	for each row

	* interface.c: bring back sensitivity changing

	* infoview.c: bring back getting and displauing the info

	* callbacks.c: save and restore the highlighted disk. Handle
	row selections correctly now

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: bring back the disks list among other things

	* callbacks.c: update the disk list.

2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
