@@ -1,5 +1,11 @@
 2001-11-04  Kevin Vandersloot <kfv101@psu.edu>
 
+	* callbacks.c: bring back some keybindings
+
+	* proctable.c: same here
+
+2001-11-04  Kevin Vandersloot <kfv101@psu.edu>
+
 	* Makefile.am: no longer need to link to pthread stuff
 
 	* callbacks.c: double click toggles info tab
